[package]
name = "vy-vacant-seats"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
json = "0.12.4"
tokio = { version = "1.39.2", features = ["full"] }
chrono = "0.4.38"
serde_json = "1.0.125"
serde = { version = "1.0.207", features = ["derive"] }
